@@ -459,6 +459,10 @@ highlight_convert_tabs = 2
 use_php = 0
 
 # path to php executable
+# (This should be set to the path of a PHP CLI executable, not the path
+# to a CGI executable. If you use a CGI executable, you may see "no input file
+# specified" or "force-cgi-redirect" errors instead of colorized source. The
+# output of "php -v" tells you whether an given executable is CLI or CGI.)
 php_exe_path = php
 # php_exe_path = /usr/local/bin/php
 # php_exe_path = C:\Program Files\php\cli\php.exe
